<resources>
    <string name="app_name" translatable="false">CATMan</string>
    <string name="add_purpose">Добавить цель</string>
    <string name="add_task">Добавить задачу</string>
    <string name="description">Описание</string>
    <string name="finished_tasks">Завершенные задачи</string>
    <string name="not_finished_tasks">Незавершенные задачи</string>
    <string name="purpose">Цель</string>
    <string name="color">Цвет</string>
    <string name="deadline">Крайний срок</string>
    <string name="start_time">Начало</string>
    <string name="repeating">Повтор</string>
    <string name="cancel">Отменить</string>
    <string name="save">Сохранить</string>
    <string name="sort_by">Сортировать по</string>
    <string name="today_plan">План на сегодня</string>
    <string name="timer">Таймер</string>
    <string name="statistics">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="category_list">Сферы жизни</string>
    <string name="profile">Профиль</string>
    <string name="drawer_description">Меню навигации</string>
    <string name="required_field_legend">* Обязательное поле</string>
    <string name="required_field_error">Обязательное поле</string>
    <string name="add">Добавить</string>
    <string name="apply">Применить</string>
    <string name="add_category">Добавить сферу</string>
    <string name="choose">Выбрать</string>
    <string name="category">Сфера жизни</string>
    <string name="purpose_settings">Настройки цели</string>
    <string name="category_settings">настройки категории</string>
    <string name="remove">Удалить</string>
    <string name="internal_error">Произошла внутренняя ошибка приложения</string>
    <string name="background_work">Фоновая работа</string>
    <string name="purpose_adding">Добавление цели…</string>
    <string name="purpose_added">Цель успешно добавлена</string>
    <string name="purpose_failed_adding">Не удалось добавить цель</string>
    <string name="execution_failed">Произошла ошибка</string>
    <string name="purpose_updating">Обновление цели…</string>
    <string name="purpose_updated">Цель успешно обновлена</string>
    <string name="purpose_failed_updating">Не удалось обновить цель</string>
    <string name="purpose_deleting">Удаление цели…</string>
    <string name="purpose_deleted">Цель успешно удалена</string>
    <string name="purpose_failed_deleting">Не удалось удалить цель</string>
    <string name="deadline_cant_be_past">Дедлайн не может быть прошедшим</string>
    <string name="cancelling">Отмена…</string>
    <string name="cancelled">Отменено</string>
    <string name="category_adding">Добавление сферы…</string>
    <string name="category_updating">Изменение сферы…</string>
    <string name="category_added">Сфера успешно добавлена</string>
    <string name="category_failed_adding">Не удалось добавить сферу</string>
    <string name="category_updated">Сфера успешно обновлена</string>
    <string name="category_failed_updating">Не удалось обновить сферу</string>
    <string name="category_deleting">Удаление сферы…</string>
    <string name="category_deleted">Сфера успешно удалена</string>
    <string name="category_failed_deleting">Не удалось удалить сферу</string>
    <string name="start">Начать</string>
    <string name="finish">Завершить</string>
    <string name="pause">Приостановить</string>
    <string name="resume">Возобновить</string>
    <string name="cream">Кремовый</string>
    <string name="aquamarine">Аквамариновый</string>
    <string name="amaranth_pink">Амарантово-розовый</string>
    <string name="required_greater_int" formatted="true">Число должно быть целым и больше %1$d</string>
    <string name="entity_adding">Добавление объекта…</string>
    <string name="entity_deleting">Удаление объекта…</string>
    <string name="entity_updating">Обновление объекта…</string>
    <string name="task_adding">Добавление задачи…</string>
    <string name="task_added">Задача успешно добавлена</string>
    <string name="task_failed_adding">Не удалось добавить задачу</string>
    <string name="task_deleting">Удаление задачи…</string>
    <string name="task_deleted">Задача успешно удалена</string>
    <string name="task_failed_deleting">Не удалось удалить задачу</string>
    <string name="task_updating">Обновление задачи…</string>
    <string name="task_updated">Сфера успешно обновлена</string>
    <string name="task_failed_updating">Не удалось обновить задачу</string>
    <string name="task">Задача</string>
    <string name="duration">Продолжительность</string>
    <string name="duration_in_tomatoes">Продолжительность в помидорах</string>
</resources>