<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group"
        android:checkableBehavior="single" >
        <item
            android:id="@+id/category_list"
            android:title="@string/category_list"
            android:checkable="true"/>
        <item
            android:id="@+id/today_plan"
            android:title="@string/today_plan"
            android:checkable="true" />
        <item
            android:id="@+id/timer"
            android:title="@string/timer"
            android:checkable="true" />
        <item
            android:id="@+id/statistics"
            android:title="@string/statistics"
            android:checkable="true" />
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:checkable="true" />
    </group>
</menu>