<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/category_list">

    <fragment
        android:id="@+id/category_list"
        android:name="ru.stolexiy.catman.ui.categorylist.CategoryListFragment"
        android:label=" "
        tools:layout="@layout/fragment_category_list">
        <action
            android:id="@+id/action_category_list_fragment_to_taskListFragment"
            app:destination="@id/purpose_details" >
            <argument
                android:name="purpose_name" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/purpose_details"
        android:name="ru.stolexiy.catman.ui.details.purpose.PurposeDetailsFragment">
        <argument
            android:name="purpose_id"
            app:argType="long" />
        <action
            android:id="@+id/action_purpose_details_to_timer"
            app:destination="@id/timer" />
    </fragment>
    <fragment
        android:id="@+id/today_plan"
        android:name="ru.stolexiy.catman.ui.plan.TodayPlanFragment"
        android:label="@string/today_plan" />
    <fragment
        android:id="@+id/settings"
        android:name="ru.stolexiy.catman.ui.settings.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/statistics"
        android:name="ru.stolexiy.catman.ui.statistics.StatisticsFragment"
        android:label="@string/statistics" />
    <fragment
        android:id="@+id/timer"
        android:name="ru.stolexiy.catman.ui.timer.TimerFragment"
        android:label="@string/timer" />
    <argument
        android:name="task_id"
        app:argType="long" />
</navigation>