<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.stolexiy.catman.ui.timer.TimerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="?attr/background">

        <ru.stolexiy.widgets.TimerView
            android:id="@+id/timer_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/toggle_button_start"
            style="@style/Button.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textOff="@string/start"
            android:textOn="@string/pause"
            android:visibility="gone"
            app:gradientOutline="@{true}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/timer_view" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/toggle_button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/toggle_button_start"
            app:layout_constraintEnd_toEndOf="@+id/timer_view"
            app:layout_constraintTop_toTopOf="@+id/toggle_button_start" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
