<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="ru.stolexiy.catman.R" />

        <import type="ru.stolexiy.catman.ui.dialog.category.model.Category" />

        <variable
            name="category"
            type="Category" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="?attr/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view"
                style="@style/DialogDash"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dialog_title"
                style="?attr/textAppearanceHeadline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/category_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/category"
                android:minWidth="100dp"
                app:addAsteriskToHint="@{true}"
                app:boxBackgroundMode="outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialog_title"
                app:validateBy="@{category.name}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/category_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete|textAutoCorrect|textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/category_color_layout"
                style="?attr/textInputOutlinedExposedDropdownMenuStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/color"
                app:addAsteriskToHint="@{true}"
                app:bindError="@{category.color}"
                app:layout_constraintEnd_toEndOf="@+id/category_name_layout"
                app:layout_constraintStart_toStartOf="@+id/category_name_layout"
                app:layout_constraintTop_toBottomOf="@+id/category_name_layout"
                app:startIconColoredCircle="@{category.color.asFlow.argb}"
                app:startIconIsGone="@{category.color.asFlow == null}"
                app:startIconMinSize="25dp">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/category_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/category_description_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/description"
                app:layout_constraintEnd_toEndOf="@+id/category_color_layout"
                app:layout_constraintStart_toStartOf="@id/category_color_layout"
                app:layout_constraintTop_toBottomOf="@+id/category_color_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/category_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textImeMultiLine|textAutoComplete|textAutoCorrect|textCapSentences"
                    android:maxLines="2"
                    android:text="@={category.description}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/legend_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/required_field_legend"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="@+id/category_description_layout"
                app:layout_constraintStart_toStartOf="@+id/category_description_layout"
                app:layout_constraintTop_toBottomOf="@+id/category_description_layout"
                app:textColoring="@{R.color.pink}"
                app:textColoringPart='@{"*"}' />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_category_button"
                style="@style/ContainedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/add_category"
                android:enabled="@{category.isValidAsFlow}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/legend_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>